add wallet connect

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -21,10 +22,15 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@reown/appkit": "^1.0.6",
+    "@reown/appkit-adapter-wagmi": "^1.0.6",
     "@tanstack/react-query": "^5.59.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3modal/react": "^2.7.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
@@ -35,6 +41,10 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.17",
+    "wagmi": "^2.12.16",
+    "web3": "^4.13.0",
+    "web3modal": "^1.9.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
