--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@reown/appkit": "^1.0.6",
     "@reown/appkit-adapter-wagmi": "^1.0.6",
     "@tanstack/react-query": "^5.59.0",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "@web3modal/react": "^2.7.1",
+    "alchemy-sdk": "^3.4.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -45,8 +45,6 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.17",
     "wagmi": "^2.12.16",
-    "web3": "^4.13.0",
-    "web3modal": "^1.9.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
