--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@reclaimprotocol/zk-fetch": "^0.1.5",
     "@reown/appkit": "^1.0.6",
     "@reown/appkit-adapter-wagmi": "^1.0.6",
     "@tanstack/react-query": "^5.59.0",
