--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
-    "@reclaimprotocol/zk-fetch": "^0.1.5",
-    "@reown/appkit": "^1.0.6",
-    "@reown/appkit-adapter-wagmi": "^1.0.6",
+    "@rainbow-me/rainbowkit": "^2.1.7",
+    "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.0",
     "alchemy-sdk": "^3.4.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "ethers": "^5.7.2",
     "framer-motion": "^11.11.0",
     "lodash.debounce": "^4.0.8",
