--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -26,10 +27,12 @@
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-table": "^8.20.5",
     "alchemy-sdk": "^3.4.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "cookies-next": "^4.2.1",
     "ethers": "^5.7.2",
     "framer-motion": "^11.11.0",
