--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^5.3.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.17",
