--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -25,6 +27,8 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@rainbow-me/rainbowkit": "^2.1.7",
+    "@reclaimprotocol/js-sdk": "^2.0.1",
+    "@reclaimprotocol/zk-fetch": "^0.1.5",
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-table": "^8.20.5",
@@ -36,6 +40,8 @@
     "cookies-next": "^4.2.1",
     "ethers": "^5.7.2",
     "framer-motion": "^11.11.0",
+    "fs": "0.0.1-security",
+    "json-edit-react": "^1.17.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
@@ -61,6 +67,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
