--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-table": "^8.20.5",
+    "@wagmi/core": "^2.13.8",
     "alchemy-sdk": "^3.4.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
